# UVA-Link-Lab-Engineering-Mobile-LLM-Research

./: .gitattributes  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-sdk/: .knownPackages
android-sdk/build-tools/34.0.0/: NOTICE.txt  aapt  aapt2  aidl  bcc_compat  dexdump  llvm-rs-cc  package.xml  source.properties  split-select  zipalign
android-sdk/build-tools/34.0.0/lib64/: libLLVM_android.dylib  libbcc.dylib  libbcinfo.dylib  libc++.1.dylib  libc++.dylib  libc++abi.1.dylib  libclang_android.dylib  libconscrypt_openjdk_jni.dylib
android-sdk/build-tools/34.0.0/lld-bin/: lld
android-sdk/cmake/3.22.1/: package.xml  source.properties
android-sdk/cmake/3.22.1/share/cmake-3.22/Help/: index.rst
android-sdk/cmake/3.22.1/share/cmake-3.22/Modules/: BasicConfigVersion-AnyNewerVersion.cmake.in  BasicConfigVersion-ExactVersion.cmake.in  BasicConfigVersion-SameMajorVersion.cmake.in  BasicConfigVersion-SameMinorVersion.cmake.in  BundleUtilities.cmake  CMakeASM_MASMInformation.cmake  CMakeCCompilerABI.c  CMakeCCompilerId.c.in  CMakeCUDACompiler.cmake.in  CMakeCUDACompilerABI.cu  CMakeCUDACompilerId.cu.in  CMakeCUDAInformation.cmake  CMakeCXXCompilerId.cpp.in  CMakeCompilerIdDetection.cmake  CMakeDependentOption.cmake  CMakeDetermineASMCompiler.cmake  CMakeDetermineCCompiler.cmake  CMakeDetermineCUDACompiler.cmake  CMakeDetermineCXXCompiler.cmake  CMakeDetermineCompileFeatures.cmake  CMakeDetermineCompiler.cmake  CMakeDetermineCompilerABI.cmake  CMakeDetermineCompilerId.cmake  CMakeDetermineFortranCompiler.cmake  CMakeDetermineHIPCompiler.cmake  CMakeDetermineRCCompiler.cmake  CMakeDetermineSwiftCompiler.cmake  CMakeDetermineSystem.cmake  CMakeExtraGeneratorDetermineCompilerMacrosAndIncludeDirs.cmake  CMakeFindBinUtils.cmake  CMakeFortranCompiler.cmake.in  CMakeFortranCompilerId.F.in  CMakeGenericSystem.cmake  CMakeHIPInformation.cmake  CMakePackageConfigHelpers.cmake  CMakeParseImplicitIncludeInfo.cmake  CMakeParseImplicitLinkInfo.cmake  CMakePlatformId.h.in  CMakePrintHelpers.cmake  CMakeSwiftInformation.cmake  (+103 more)
android-sdk/cmake/3.22.1/share/cmake-3.22/Templates/: TestDriver.cxx.in
android-sdk/cmake/3.22.1/share/emacs/site-lisp/: cmake-mode.el
android-sdk/latest/cmdline-tools/: NOTICE.txt  source.properties
android-sdk/latest/cmdline-tools/lib/: README
android-sdk/ndk/25.2.9519653/: CHANGELOG.md  NOTICE  NOTICE.toolchain  package.xml  source.properties
android-sdk/ndk/25.2.9519653/meta/: abis.json  platforms.json  system_libs.json
android-sdk/ndk/25.2.9519653/python-packages/adb/: device.py  setup.py  test.py
android-sdk/ndk/25.2.9519653/python-packages/gdbrunner/: __init__.py
android-sdk/ndk/25.2.9519653/shader-tools/darwin-x86_64/: glslc  spirv-as  spirv-cfg  spirv-dis  spirv-link  spirv-opt  spirv-reduce  spirv-val
android-sdk/ndk/25.2.9519653/simpleperf/: ChangeLog  annotate.py  app_profiler.py  binary_cache_builder.py  gecko_profile_generator.py  pprof_proto_generator.py  report_html.js  report_html.py  report_sample.py  simpleperf_report_lib.py  simpleperf_utils.py  stackcollapse.py
android-sdk/ndk/25.2.9519653/simpleperf/doc/: README.md  android_application_profiling.md  android_platform_profiling.md  collect_etm_data_for_autofdo.md  debug_dwarf_unwinding.md  executable_commands_reference.md  jit_symbols.md  sample_filter.md  scripts_reference.md  view_the_profile.md
android-sdk/ndk/25.2.9519653/simpleperf/proto/: etm_branch_list.proto
android-sdk/platform-tools/: NOTICE.txt  adb  etc1tool  fastboot  hprof-conv  make_f2fs  make_f2fs_casefold  mke2fs  package.xml  source.properties  sqlite3
android-sdk/platform-tools/lib64/: libc++.dylib
app/: build.gradle  build.gradle.kts  build.gradle.kts.backup
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: qwen2.5-0.5b-instruct-q3_k_m.gguf
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  llama-wrapper.cpp
app/src/main/res/drawable/: ic_export.xml  ic_model.xml  ic_play.xml  ic_timer.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
scripts/: download_models.py  list_files.py  setup_llama.bat  setup_llama.sh
(+1882 files in other folders)
